# tenacity-legacy

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .weblate  3RDPARTY.txt  BUILDING.md  CHANGELOG.txt  CMAKE_OPTIONS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  audacity.dox.in  nuget.config  nuget.config.in  tenacity.dox  tenacity.dox.in  vcpkg.json
cmake-proxies/libflac/: CMakeLists.txt
help/: CMakeLists.txt  audacity.1  audacity.appdata.xml  org.tenacityaudio.Tenacity.metainfo.xml  tenacity.1  tenacity.1.scd  tenacity.appdata.xml  tenacity.metainfo.xml
images/: AudacityLogo.xpm  AudacityLogo48x48.xpm  AudacityLogoAlpha.xpm  AudacityLogoWithName.xpm  CMakeLists.txt  Checked.xpm  Cursors.h  DarkAudacityLogoWithName.xpm  TenacityLogo.xpm  TenacityLogo48x48.xpm  TenacityLogoAlpha.xpm  TenacityLogoWithName.xpm  Unchecked.xpm  degimpify.sh  gnome-mime-application-x-audacity-project.xpm  tenacity-logo-light.xpm
images/ControlButtons/: TimeShiftAlpha.xpm
images/Cursors32/: ArrowLeftCursor.xpm  ArrowRightCursor.xpm  BandWidthCursor.xpm  BottomFrequencyCursor.xpm  DisabledCursor.xpm  DrawCursor.xpm  DrawToolSmoothing.xpm  EnvCursor.xpm  IBeamCursor.xpm  LabelCursorRight.xpm  RearrangeCursor.xpm  RearrangingCursor.xpm  SubViewsCursor.xpm  TimeCursor.xpm  TopFrequencyCursor.xpm  ZoomInCursor.xpm  ZoomOutCursor.xpm
images/EditButtons/: Effects.xpm  UndoAlpha.xpm
images/ToolsButtons/: Envelope.xpm  EnvelopeAlpha.xpm  IBeam.xpm  TimeShift.xpm
images/scripts/: degimpify.sh
src/: AColor.cpp  AColor.h  AColorResources.h  AboutDialog.cpp  AboutDialog.h  ActiveProjects.cpp  ActiveProjects.h  AdornedRulerPanel.cpp  AdornedRulerPanel.h  AllThemeResources.cpp  AllThemeResources.h  AttachedVirtualFunction.h  AudacityApp.cpp  AudacityApp.h  AudacityException.cpp  AudacityException.h  AudacityFileConfig.cpp  AudacityFileConfig.h  AudacityHeaders.cpp  AudacityHeaders.h  AudacityLogger.cpp  AudacityLogger.h  AudioIO.cpp  AudioIO.h  AudioIOBase.cpp  AudioIOBase.h  AudioIOBufferHelper.h  AudioIOListener.h  AutoRecoveryDialog.cpp  AutoRecoveryDialog.h  BatchCommandDialog.cpp  BatchCommandDialog.h  BatchCommands.cpp  BatchCommands.h  BatchProcessDialog.cpp  BatchProcessDialog.h  Benchmark.cpp  Benchmark.h  BuildInfo.h  CMakeLists.txt  (+249 more)
src/blockfile/: LegacyAliasBlockFile.h  LegacyBlockFile.h  NotYetAvailableException.h  ODDecodeBlockFile.h  ODPCMAliasBlockFile.h  PCMAliasBlockFile.h  SilentBlockFile.h  SimpleBlockFile.h
src/commands/: AppCommandEvent.h  AudacityCommand.cpp  AudacityCommand.h  BatchEvalCommand.h  Command.cpp  Command.h  CommandBuilder.h  CommandContext.h  CommandDirectory.h  CommandFlag.h  CommandFunctors.h  CommandHandler.h  CommandManager.cpp  CommandManager.h  CommandManagerWindowClasses.h  CommandMisc.h  CommandSignature.h  CommandTargets.cpp  CommandTargets.h  CommandType.h  CompareAudioCommand.h  Demo.h  DragCommand.h  GetInfoCommand.cpp  GetInfoCommand.h  GetTrackInfoCommand.h  HelpCommand.h  ImportExportCommands.h  Keyboard.h  LoadCommands.cpp  LoadCommands.h  MessageCommand.h  OpenSaveCommands.cpp  OpenSaveCommands.h  PreferenceCommands.h  ResponseQueue.h  ScreenshotCommand.cpp  ScreenshotCommand.h  ScriptCommandRelay.cpp  ScriptCommandRelay.h  (+7 more)
src/effects/: Amplify.h  AutoDuck.h  BassTreble.h  Biquad.h  ChangePitch.cpp  ChangePitch.h  ChangeSpeed.h  ChangeTempo.cpp  ChangeTempo.h  ClickRemoval.h  Compressor.h  Compressor2.cpp  Compressor2.h  Contrast.h  Distortion.h  DtmfGen.cpp  DtmfGen.h  EBUR128.h  Echo.h  Effect.cpp  Effect.h  EffectManager.h  EffectUI.cpp  EffectUI.h  Equalization.h  Equalization48x.h  Fade.h  FindClipping.h  Generator.h  Invert.h  Leveller.h  LoadEffects.cpp  LoadEffects.h  Loudness.h  Noise.h  NoiseReduction.cpp  NoiseReduction.h  NoiseRemoval.cpp  NoiseRemoval.h  Normalize.h  (+25 more)
src/export/: Export.h  ExportFFmpegDialogs.h  ExportMP3.cpp  ExportMP3.h  ExportMultiple.h  ExportPCM.cpp
src/import/: FormatClassifier.h  Import.cpp  Import.h  ImportAUP.cpp  ImportForwards.h  ImportPlugin.h  ImportRaw.h  MultiFormatReader.h  RawAudioGuess.cpp  RawAudioGuess.h  SpecPowerMeter.h
src/menus/: EditMenus.cpp  ExtraMenus.cpp  HelpMenus.cpp  ToolbarMenus.cpp  TrackMenus.cpp  TransportMenus.cpp  ViewMenus.cpp
src/ondemand/: ODComputeSummaryTask.h  ODDecodeFFmpegTask.h  ODDecodeFlacTask.h  ODDecodeTask.h  ODManager.h  ODTask.h  ODTaskThread.h  ODWaveTrackTaskQueue.h
src/prefs/: ApplicationPrefs.cpp  ApplicationPrefs.h  BatchPrefs.h  DevicePrefs.h  DirectoriesPrefs.cpp  DirectoriesPrefs.h  EffectsPrefs.cpp  EffectsPrefs.h  ExtImportPrefs.cpp  ExtImportPrefs.h  GUIPrefs.cpp  GUIPrefs.h  GUISettings.h  ImportExportPrefs.h  KeyConfigPrefs.cpp  KeyConfigPrefs.h  LibraryPrefs.cpp  LibraryPrefs.h  MidiIOPrefs.h  ModulePrefs.cpp  ModulePrefs.h  MousePrefs.cpp  MousePrefs.h  PlaybackPrefs.h  PrefsDialog.cpp  PrefsDialog.h  PrefsPanel.cpp  PrefsPanel.h  QualityPrefs.h  QualitySettings.h  RecordingPrefs.cpp  RecordingPrefs.h  SpectrogramSettings.h  SpectrumPrefs.h  ThemePrefs.cpp  ThemePrefs.h  TracksBehaviorsPrefs.h  TracksPrefs.h  WarningsPrefs.h  WaveformPrefs.h  (+1 more)
src/toolbars/: ControlToolBar.cpp  ControlToolBar.h  DeviceToolBar.cpp  DeviceToolBar.h  EditToolBar.h  MeterToolBar.cpp  MeterToolBar.h  MixerToolBar.h  ScrubbingToolBar.h  SelectionBar.h  SelectionBarListener.h  SpectralSelectionBar.h  SpectralSelectionBarListener.h  TimeToolBar.h  ToolBar.cpp  ToolBar.h  ToolDock.cpp  ToolDock.h  ToolManager.cpp  ToolManager.h  ToolsToolBar.h  TranscriptionToolBar.h
src/widgets/: AButton.h  ASlider.cpp  ASlider.h  AttachableScrollBar.h  AudacityMessageBox.h  BackedPanel.h  ErrorDialog.cpp  ErrorDialog.h  ExpandingToolBar.h  FileConfig.cpp  FileConfig.h  FileHistory.h  Grabber.cpp  Grabber.h  Grid.h  HelpSystem.h  HtmlWindow.h  ImageRoll.h  KeyView.h  Meter.cpp  Meter.h  MeterPanelBase.h  MultiDialog.cpp  MultiDialog.h  NumericTextCtrl.cpp  NumericTextCtrl.h  Overlay.h  OverlayPanel.h  Plot.cpp  PopupMenuTable.h  ProgressDialog.h  ReadOnlyText.h  Ruler.h  SliderTextCtrl.cpp  Warning.h  WindowAccessible.h  valnum.h  (+3 more)
(+363 files in other folders)
